--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,14 @@ rvm:
   - 2.4.1
   
 install: gem install jekyll html-proofer
+# branch whitelist, only for GitHub Pages
 
 script: jekyll build && htmlproofer ./_site
 
-# branch whitelist, only for GitHub Pages
 branches:
   only:
   - gh-pages     # test the gh-pages branch
+  - pages-(.*)   # anything prefixed with pages-
 
 env:
   global:
