--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,20 @@
 language: ruby
-rvm:
-  - 2.4.1
-  
-install: gem install jekyll html-proofer
-# branch whitelist, only for GitHub Pages
 
-script: jekyll build && htmlproofer ./_site
+rvm:
+  - 2.4
+
+script:
+  - bundle exec jekyll build
+  - bundle exec htmlproofer ./_site --only-4xx --check-favicon --check-html
+
+env:
+  global:
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
 
 branches:
   only:
   - gh-pages     # test the gh-pages branch
   - pages-(.*)   # anything prefixed with pages-
-
-env:
-  global:
-  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
-
-addons:
-  apt:
-    packages:
-    - libcurl4-openssl-dev
 
 sudo: false # route your build to the container-based infrastructure for a faster build
 
